Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
0.11.1
Description
This was brought up by the Go patch ARROW-3613. If you append some data to a builder, then call Resize with something smaller than what's reported by length(), the capacity will be updated, but the length will not. So I think further appends would probably segfault. Either way we should add some tests for this case of "shrinking" a builder (which destroys data, but it's permitted by the API
Attachments
Issue Links
- links to