ARROW-3740: [C++] Builder should not downsize

Downsizing is a tricky business, it is safer to invoke Reset() then Reserve().

Author: François Saint-Jacques <fsaintjacques@gmail.com>

Closes #3055 from fsaintjacques/ARROW-3740-builder-resize-shrink and squashes the following commits:

4af5f1661 <François Saint-Jacques> Arrow-3740:  Builder should not downsize